<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="calculator">Calculator</string>
    <string name="using_scriptengine">using ScriptEngine</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="del">del</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="equals">=</string>
    <string name="plusSymbol">+</string>
    <string name="minusSymbol">-</string>
    <string name="multiplySymbol">*</string>
    <string name="openBracket">(</string>
    <string name="ac">AC</string>
    <string name="closedBracket">)</string>
    <string name="squareRootSymbol">√</string>
    <string name="divideSymbol">/</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
</resources>