<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/calculator"
        android:textColor="#DF9C27B0"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/using_scriptengine"
        android:textColor="#475CD8"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/titleText"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="210dp"
        app:layout_constraintBottom_toTopOf="@id/allClearButton"
        app:layout_constraintTop_toBottomOf="@id/subtitleText"
        android:layout_marginHorizontal="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">


            <EditText
                android:id="@+id/calculatorDisplayEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"


                android:background="@android:color/transparent"
                android:textSize="60sp"
                android:textStyle="normal"
                android:fontFamily="sans-serif-thin"
                android:gravity="end"
                android:textAlignment="viewEnd"

                />

        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/zeroButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:backgroundTint="#4B494E"
        android:fontFamily="sans-serif-thin"
        android:onClick="zeroOnClick"
        android:text="@string/_0"
        android:textColor="#EAEAEA"
        android:textColorLink="#AF2121"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dotButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:backgroundTint="#4B494E"
        android:fontFamily="sans-serif-thin"
        android:onClick="dotOnClick"
        android:text="@string/dot"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/zeroButton" />


    <Button
        android:id="@+id/deleteButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:backgroundTint="#4B494E"
        android:fontFamily="sans-serif-thin"
        android:onClick="delOnClick"
        android:text="@string/del"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/dotButton" />

    <Button
        android:id="@+id/oneButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="#4B494E"
        android:fontFamily="sans-serif-thin"
        android:onClick="oneOnClick"
        android:text="@string/_1"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/zeroButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/twoButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:backgroundTint="#4B494E"
        android:fontFamily="sans-serif-thin"
        android:onClick="twoOnClick"
        android:text="@string/_2"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/dotButton"
        app:layout_constraintStart_toEndOf="@id/oneButton" />

    <Button
        android:id="@+id/threeButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:backgroundTint="#4B494E"
        android:fontFamily="sans-serif-thin"
        android:onClick="threeOnClick"
        android:text="@string/_3"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/deleteButton"
        app:layout_constraintStart_toEndOf="@id/twoButton" />

    <Button
        android:id="@+id/fourButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:backgroundTint="#4B494E"
        android:fontFamily="sans-serif-thin"
        android:onClick="fourOnClick"
        android:text="@string/_4"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/oneButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fiveButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:backgroundTint="#4B494E"
        android:fontFamily="sans-serif-thin"
        android:onClick="fiveOnClick"
        android:text="@string/_5"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/twoButton"
        app:layout_constraintStart_toEndOf="@id/fourButton" />

    <Button
        android:id="@+id/sixButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:backgroundTint="#4B494E"
        android:fontFamily="sans-serif-thin"
        android:onClick="sixOnClick"
        android:text="@string/_6"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/threeButton"
        app:layout_constraintStart_toEndOf="@id/fiveButton" />

    <Button
        android:id="@+id/sevenButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#4B494E"
        android:fontFamily="sans-serif-thin"
        android:onClick="sevenOnClick"
        android:text="@string/_7"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/fourButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/eightButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#4B494E"
        android:fontFamily="sans-serif-thin"
        android:onClick="eightOnClick"
        android:text="@string/_8"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/fiveButton"
        app:layout_constraintStart_toEndOf="@id/sevenButton" />

    <Button
        android:id="@+id/nineButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#4B494E"
        android:fontFamily="sans-serif-thin"
        android:onClick="nineOnClick"
        android:text="@string/_9"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/sixButton"
        app:layout_constraintStart_toEndOf="@id/eightButton" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:backgroundTint="#811499"
        android:fontFamily="sans-serif-thin"
        android:onClick="addOnClick"
        android:text="@string/plusSymbol"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/equalsButton"
        app:layout_constraintStart_toEndOf="@+id/threeButton" />

    <Button
        android:id="@+id/subtractButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:backgroundTint="#811499"
        android:fontFamily="sans-serif-thin"
        android:onClick="subtractOnClick"
        android:text="@string/minusSymbol"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintStart_toEndOf="@+id/sixButton" />

    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:backgroundTint="#811499"
        android:fontFamily="sans-serif-thin"
        android:onClick="multiplyOnClick"
        android:text="@string/multiplySymbol"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/subtractButton"
        app:layout_constraintStart_toEndOf="@+id/nineButton" />

    <Button
        android:id="@+id/openBracketButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:backgroundTint="#811499"
        android:fontFamily="sans-serif-thin"
        android:onClick="openBracketOnClick"
        android:text="@string/openBracket"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/sevenButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/allClearButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#811499"
        android:fontFamily="sans-serif-thin"
        android:onClick="allClearOnClick"
        android:text="@string/ac"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/divideButton"
        app:layout_constraintStart_toEndOf="@+id/tanButton" />

    <Button
        android:id="@+id/sinButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:backgroundTint="#811499"
        android:fontFamily="sans-serif-thin"
        android:onClick="sinOnClick"
        android:text="@string/sin"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/openBracketButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cosButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:backgroundTint="#811499"
        android:fontFamily="sans-serif-thin"
        android:onClick="cosOnClick"
        android:text="@string/cos"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/closedBracketButton"
        app:layout_constraintStart_toEndOf="@+id/sinButton" />

    <Button
        android:id="@+id/tanButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:backgroundTint="#811499"
        android:fontFamily="sans-serif-thin"
        android:onClick="tanOnClick"
        android:text="@string/tan"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/squareRootButton"
        app:layout_constraintStart_toEndOf="@+id/cosButton" />

    <Button
        android:id="@+id/closedBracketButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:backgroundTint="#811499"
        android:fontFamily="sans-serif-thin"
        android:onClick="closedBracketOnClick"
        android:text="@string/closedBracket"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/eightButton"
        app:layout_constraintStart_toEndOf="@+id/openBracketButton" />

    <Button
        android:id="@+id/squareRootButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:backgroundTint="#811499"
        android:fontFamily="sans-serif-thin"
        android:onClick="squareRootOnClick"
        android:text="@string/squareRootSymbol"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/nineButton"
        app:layout_constraintStart_toEndOf="@+id/closedBracketButton" />

    <Button
        android:id="@+id/divideButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:backgroundTint="#811499"
        android:fontFamily="sans-serif-thin"
        android:onClick="divideOnClick"
        android:text="@string/divideSymbol"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/multiplyButton"
        app:layout_constraintStart_toEndOf="@+id/squareRootButton" />

    <Button
        android:id="@+id/equalsButton"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#811499"
        android:fontFamily="sans-serif-thin"
        android:onClick="equalsOnClick"
        android:text="@string/equals"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/deleteButton" />
</androidx.constraintlayout.widget.ConstraintLayout>